plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.1' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

ext {
    jjwtVersion = '0.12.6'
    springdocVersion = '3.0.1'
    uuidCreatorVersion = '6.0.0'
    // QueryDSL 버전 관리 (필요 시 수정)
    queryDslVersion = '5.1.0:jakarta'
}

allprojects {
    group = 'com.dev.common'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        // === 1. Lombok (기존 유지) ===
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        // === 2. JPA & QueryDSL 공통 적용 ===
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

        implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
        annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"

        // === 3. Test (기존 유지) ===
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
    }

    // === 4. QueryDSL 빌드 경로 설정 (모든 서브 모듈 자동 적용) ===
    def querydslDir = "$buildDir/generated/querydsl"

    sourceSets {
        main.java.srcDirs += [ querydslDir ]
    }

    tasks.withType(JavaCompile) {
        options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
    }

    clean.doLast {
        file(querydslDir).deleteDir()
    }

    tasks.named('test') {
        useJUnitPlatform()
    }
}